--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Home</title>
         <style>
             html{
-                background-color: blue;
+                background-color: green;
             }
 
             p {
