--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 let response;
                 try
                 {
-                    response = await fetch("https://iceeyes1992.github.io/");
+                    response = await fetch("https://github.com/");
                     if (response.ok)
                     {
                         let text = await response.text();
